--- a/forex-lp/index.html
+++ b/forex-lp/index.html
@@ -21,17 +21,48 @@
         <form class="form" action="" method="post">
           <div class="form__flex">
             <div class="form__input">
-              <input type="text" placeholder="Full name">
-              <input type="email" placeholder="Email">
-              <input type="tel" placeholder="Phone number">
+              <input type="text" tabindex="1" placeholder="Full name">
+              <input type="email" tabindex="2" placeholder="Email">
+              <input type="tel" tabindex="3" placeholder="Phone number">
             </div>
             <button class="form__btn">Get free trading account</button>
           </div>
-          <input id="checkbox" type="checkbox">
+          <input id="checkbox" type="checkbox" tabindex="4">
           <label for="checkbox">I am over 18 years and I accept these Terms & Conditions</label>
         </form>
       </div>
+      <small>*Contact us. Leverage restrictions apply</small>
     </div>
   </header>
+  <div class="string"></div>
+  <div class="miss">
+    <p class="miss__top">CFDs are leveraged products that involve substantial risk and may result in the loss of your entire balance.</p>
+    <p class="miss__center">Don’t miss this free trial with <span>Forex24 Global</span></p>
+  </div>
+  <section class="edge">
+    <div class="container">
+      <h2 class="visually-hidden">Advantages</h2>
+      <div class="edge__flex">
+        <div class="edge__box  edge__box--over">
+          <b>Over 200+ assets</b>
+          <p>Choose from various Asset Classes including CFDs on Currencies, Metals, Stocks, Indices and Commodities.</p>
+        </div>
+        <div class="edge__box  edge__box--free">
+          <b>Free Practice Account</b>
+          <p>Start practicing with virtual money before investing your own.  Get to know our webtrader or mobile app with a FREE Demo Account and test your trading Skills.</p>
+        </div>
+        <div class="edge__box  edge__box--award">
+          <b>Award Winning Platform</b>
+          <p>Trade with an Award-Winning Platform, a Mobile App or a No-Download Web-based Platform with a customizable environment to your needs.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="app">
+    <div class="container">
+      <h3 class="visually-hidden">Available on the phone</h3>
+      <img src="" alt="">
+    </div>
+  </section>
 </body>
 </html>
