--- a/forex-lp/index.html
+++ b/forex-lp/index.html
@@ -61,8 +61,10 @@
   <section class="app">
     <div class="container">
       <h3 class="visually-hidden">Available on the phone</h3>
-      <img src="" alt="">
     </div>
   </section>
+  <div class="promo">
+    <div class="promo__logo"></div>
+  </div>
 </body>
 </html>
