--- a/forex-lp/index.html
+++ b/forex-lp/index.html
@@ -8,9 +8,6 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-  <!-- <video width="400" height="300" controls="controls">
-    <source src="video/1.mp4" type="video/mp4">
-  </video> -->
   <header class="header">
     <div class="container">
       <h1 class="visually-hidden">Forex24 Global</h1>
@@ -41,7 +38,7 @@
   </div>
   <section class="edge">
     <div class="container">
-      <h2 class="visually-hidden">Advantages</h2>
+      <h1 class="visually-hidden">Advantages</h2>
       <div class="edge__flex">
         <div class="edge__box  edge__box--over">
           <b>Over 200+ assets</b>
@@ -60,11 +57,45 @@
   </section>
   <section class="app">
     <div class="container">
-      <h3 class="visually-hidden">Available on the phone</h3>
+      <h1 class="visually-hidden">Available on the phone</h3>
+      <div class="app__top">
+        <b>FOREX24 GLOBAL<br>Anytime, Anywhere</b>
+        <p>Trade your favourite underlying assets even while you are on the go using the app available at the App Store and Google Play. Stay connected and up to date and trade while on the go.</p>
+        <a href="#" title="App Store">
+          <img src="img/apple.png" alt="App Store"><br>
+        </a>
+        <a href="#" title="Google Play">
+          <img src="img/google.png" alt="Google Play">
+        </a>
+      </div>
+      <div class="app__bottom"></div>
     </div>
   </section>
   <div class="promo">
     <div class="promo__logo"></div>
   </div>
+  <section class="trading">
+    <div class="container">
+      <h1>Even more reasons to open your trading account with<br><span>Forex24 Global</span></h1>
+      <div class="trading__flex">
+        <ul>
+          <li>Forex24 Global is fully regulated and licensed</li>
+          <li>No Deposit Fees on Real Accounts</li>
+          <li>Extremely Law Spreads</li>
+          <li>Friendly Customer Support</li>
+          <li>Registered in EU Member States</li>
+          <li>Range of account types for experieneced & beginners</li>
+        </ul>
+        <ul>
+          <li>Swap-Free Account Type available</li>
+          <li>Expert Advisers & other MetaTrader 4 plugins are welcome</li>
+          <li>Flexible leverage* for all trading accounts up to 1:400</li>
+          <li>Your funds are segregated with Regulated Banking Instiitutions</li>
+          <li>Deposit and withdraw funds with a choice of payment systems</li>
+          <p>*Leverage is offered based on your knowledge and experience.</p>
+        </ul>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
