finish markup and styling

--- a/forex-lp/index.html
+++ b/forex-lp/index.html
@@ -97,5 +97,25 @@
       </div>
     </div>
   </section>
+  <section class="acc">
+    <div class="container">
+      <h1>Are you ready to start trading?<br>Get your free demo account now!</h1>
+      <a href="#">I want my free demo account</a>
+      <div class="acc__shadow"></div>
+      <p>CFDs are leveraged products that involve substantial risk and may result in the loss of your entire balance.</p>
+    </div>
+  </section>
+  <section class="pay">
+    <h1 class="visually-hidden">Payment Methods</h1>
+    <div class="pay__methods"></div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <h1 class="visually-hidden">Footer</h1>
+      <b>General Risk Worning</b>
+      <p>Trading in complex leveraged products such as CFDs carries a high level of risk and can result in the loss of all your investment. As such, CFDs may not be appropriate for all investors. You should not invest money that you cannot afford to lose. Before deciding to trade, you should become aware of all the risks associated with CFDs trading, and seek advice from an independent and suitably licensed financial advisor. Under no circumstances shall we have any liability to any person or entity for (a) any loss or damage in whole or part caused by, resulting from, or relating to any transactions related to CFDs or (b) any direct, indirect, special, consequential or incidental damages whatsoever. For more information about the risks associated with trading CFDs please read our "Full Risk Disclosure Statement".</p>
+      <p>Copyright © 2018. All Rights Reserved</p>
+    </div>  
+  </footer>
 </body>
 </html>
