--- a/forex-lp/index.html
+++ b/forex-lp/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <div class="container">
       <h1 class="visually-hidden">Forex24 Global</h1>
-      <img src="img/logo.png" alt="Forex24Global">
+      <img src="img/logo.svg" alt="Forex24Global" width="442" height="141">
       <b class="header__title">Now you can trade CFDs/Forex with competitive spreads and up to 1:400 leverage*</b>
       <div class="header__form">
         <b>Start trading with a FREE demo account</b>
@@ -112,7 +112,7 @@
   <footer class="footer">
     <div class="container">
       <h1 class="visually-hidden">Footer</h1>
-      <b>General Risk Worning</b>
+      <b>General Risk Warning</b>
       <p>Trading in complex leveraged products such as CFDs carries a high level of risk and can result in the loss of all your investment. As such, CFDs may not be appropriate for all investors. You should not invest money that you cannot afford to lose. Before deciding to trade, you should become aware of all the risks associated with CFDs trading, and seek advice from an independent and suitably licensed financial advisor. Under no circumstances shall we have any liability to any person or entity for (a) any loss or damage in whole or part caused by, resulting from, or relating to any transactions related to CFDs or (b) any direct, indirect, special, consequential or incidental damages whatsoever. For more information about the risks associated with trading CFDs please read our "Full Risk Disclosure Statement".</p>
       <p>Copyright © 2018. All Rights Reserved</p>
     </div>  
