--- a/forex-lp/index.html
+++ b/forex-lp/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <div class="container  container--header">
       <h1 class="visually-hidden">Forex24 Global</h1>
-      <img src="img/logo.svg" alt="Forex24Global" width="420" height="141">
+      <img src="img/logo.svg" alt="Forex24Global">
       <b class="header__title">Now you can trade CFDs/Forex with competitive spreads and up to 1:400 leverage*</b>
       <div class="header__form">
         <b>Start trading with a FREE demo account</b>
