--- a/forex/index.html
+++ b/forex/index.html
@@ -37,7 +37,7 @@
       <div class="slider__slide  slider__slide--one">
         <div class="container">
           <p>TRADE THE WORLD WITH</p>
-          <img src="img/slider-logo.png" alt="">
+          <img src="img/slider-logo.svg" alt="">
           <p>CFDs on FOREX, SHARES, INDICES,<br>SPOT METALS, FUTURES, BONDS, OPTIONS<br>AND ETFs</p>
           <a href="#">START TRADING NOW</a>
         </div>
@@ -45,7 +45,7 @@
       <div class="slider__slide  slider__slide--two">
         <div class="container">
           <p>TRADE THE WORLD WITH</p>
-          <img src="img/slider-logo.png" alt="">
+          <img src="img/slider-logo.svg" alt="">
           <p>CFDs on FOREX, SHARES, INDICES,<br>SPOT METALS, FUTURES, BONDS, OPTIONS<br>AND ETFs</p>
           <a href="#">START TRADING NOW</a>
         </div>
@@ -53,7 +53,7 @@
       <div class="slider__slide  slider__slide--three">
         <div class="container">
           <p>TRADE THE WORLD WITH</p>
-          <img src="img/slider-logo.png" alt="">
+          <img src="img/slider-logo.svg" alt="">
           <p>CFDs on FOREX, SHARES, INDICES,<br>SPOT METALS, FUTURES, BONDS, OPTIONS<br>AND ETFs</p>
           <a href="#">START TRADING NOW</a>
         </div>
@@ -61,7 +61,7 @@
       <div class="slider__slide  slider__slide--four">
         <div class="container">
           <p>TRADE THE WORLD WITH</p>
-          <img src="img/slider-logo.png" alt="">
+          <img src="img/slider-logo.svg" alt="">
           <p>CFDs on FOREX, SHARES, INDICES,<br>SPOT METALS, FUTURES, BONDS, OPTIONS<br>AND ETFs</p>
           <a href="#">START TRADING NOW</a>
         </div>
