--- a/forex-lp/index.html
+++ b/forex-lp/index.html
@@ -59,7 +59,7 @@
     <div class="container">
       <h1 class="visually-hidden">Available on the phone</h3>
       <div class="app__top">
-        <b>FOREX24 GLOBAL<br>Anytime, Anywhere</b>
+        <b>Forex24 Global Anytime, Anywhere</b>
         <p>Trade your favourite underlying assets even while you are on the go using the app available at the App Store and Google Play. Stay connected and up to date and trade while on the go.</p>
         <a href="#" title="App Store">
           <img src="img/apple.png" alt="App Store"><br>
@@ -76,7 +76,7 @@
   </div>
   <section class="trading">
     <div class="container">
-      <h1>Even more reasons to open your trading account with<br><span>Forex24 Global</span></h1>
+      <h1>Even more reasons to open your trading account with <span>Forex24 Global</span></h1>
       <div class="trading__flex">
         <ul>
           <li>Forex24 Global is fully regulated and licensed</li>
