--- a/forex-lp/index.html
+++ b/forex-lp/index.html
@@ -81,7 +81,7 @@
         <ul>
           <li>Forex24 Global is fully regulated and licensed</li>
           <li>No Deposit Fees on Real Accounts</li>
-          <li>Extremely Law Spreads</li>
+          <li>Extremely Low Spreads</li>
           <li>Friendly Customer Support</li>
           <li>Registered in EU Member States</li>
           <li>Range of account types for experieneced & beginners</li>
