--- a/forex-lp/index.html
+++ b/forex-lp/index.html
@@ -90,7 +90,7 @@
           <li>Swap-Free Account Type available</li>
           <li>Expert Advisers & other MetaTrader 4 plugins are welcome</li>
           <li>Flexible leverage* for all trading accounts up to 1:400</li>
-          <li>Your funds are segregated with Regulated Banking Instiitutions</li>
+          <li>Your funds are segregated with regulated banking institutions</li>
           <li>Deposit and withdraw funds with a choice of payment systems</li>
           <p>*Leverage is offered based on your knowledge and experience.</p>
         </ul>
