--- a/xm/index.html
+++ b/xm/index.html
@@ -11,6 +11,9 @@
   <header class="header">
     <div class="container">
       <div class="header__flex">
+        <div class="header__logo">
+          <img src="img/logo.svg" alt="XM-Crypto">
+        </div>
         <div class="header__left">
           <div class="header__nav">
             <ul>
@@ -35,8 +38,6 @@
   </header>
   <section class="title">
     <div class="container">
-      <img class="title__logo" src="img/logo.png" alt="XM-crypto">
-      <img class="title__logo-s" src="img/logo-s.png" alt="XM-crypto">
       <h3>A trusted and reliable<br>digital currency exchanger</h3>
       <div class="title__flex">
         <div class="title__left">
