--- a/xm/index.html
+++ b/xm/index.html
@@ -11,28 +11,18 @@
   <header class="header">
     <div class="container">
       <div class="header__flex">
-        <div class="header__logo">
-          <img src="img/logo.svg" alt="XM-Crypto">
-        </div>
-        <div class="header__left">
-          <div class="header__nav">
-            <ul>
-              <li><a href="#">Trade</a></li>
-              <li><a href="#">Media</a></li>
-              <li><a href="#">Help</a></li>
-              <li><a href="#">Blog</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="header__right">
-          <div class="header__user">
-            <ul>
-              <li><a href="#">Sign up</a></li>
-              <li><a href="#">Login</a></li>
-              <li><a href="#">EN</a></li>
-            </ul>
-          </div>
-        </div>
+        <img class="header__logo" src="img/logo.svg" alt="XM-Crypto">
+        <ul class="header__nav">
+          <li><a href="#">Trade</a></li>
+          <li><a href="#">Media</a></li>
+          <li><a href="#">Help</a></li>
+          <li><a href="#">Blog</a></li>
+          <ul class="header__user">
+            <li><a href="#">Sign up</a></li>
+            <li><a href="#">Login</a></li>
+            <li><a href="#">EN</a></li>
+          </ul>
+        </ul>
       </div>
     </div>
   </header>
