--- a/forex/trading/account-types.html
+++ b/forex/trading/account-types.html
@@ -64,6 +64,7 @@
   <section class="account">
     <div class="container">
       <p>We present our customers with an account selection that can satisfy each trader’s needs and preferences. Our team has thought about even the smallest of details and produced different account types so you can select the one that best suits your needs. There are different accounts to choose from and each one has its benefits.</p>
+    </div>
       <div class="account__types">
         <div class="account__box  account__box--bronze">
           <header>
@@ -89,11 +90,13 @@
           </footer>
         </div>
         <div class="account__box  account__box--silver">
-          <div class="account__popular"></div>
           <header>
             <b>Classic Silver</b>
             <p>Trading for<br>experienced investors</p>
           </header>
+          <!-- <div class="account__popular">
+            Most popular
+          </div> -->
           <p>Min First Deposit: $/£/€/500</p>
           <p>Account Currency: USD/EUR/GBP</p>  
           <p>Default Leverage: 1:50</p>
