--- a/forex/index.html
+++ b/forex/index.html
@@ -149,6 +149,7 @@
     <p class="sign__title">Sign up NOW</p>
     <p class="sign__text">and get expert<br>analytics BY OUR LOWYERS</p>
     <input class="sign__input" type="email" placeholder="Enter your E-mail">
+    <button class="sign__submit">Submit</button>
   </section>
   <section class="adv">
     <div class="container">
