--- a/forex/index.html
+++ b/forex/index.html
@@ -148,8 +148,10 @@
   <section class="sign">
     <p class="sign__title">Sign up NOW</p>
     <p class="sign__text">and get expert<br>analytics BY OUR LOWYERS</p>
-    <input class="sign__input" type="email" placeholder="Enter your E-mail">
-    <button class="sign__submit">Submit</button>
+    <form action="" method="post">
+      <input class="sign__input" type="email" placeholder="Enter your E-mail">
+      <input class="sign__submit" type="submit" value="Submit">
+    </form>
   </section>
   <section class="adv">
     <div class="container">
