--- a/forex/index.html
+++ b/forex/index.html
@@ -147,7 +147,7 @@
   </section>
   <section class="sign">
     <p class="sign__title">Sign up NOW</p>
-    <p class="sign__text">and get expert<br>analytics BY OUR LOWYERS</p>
+    <p class="sign__text">And get expert<br>analytics by our lawyers</p>
     <form action="" method="post">
       <input class="sign__input" type="email" placeholder="Enter your E-mail">
       <input class="sign__submit" type="submit" value="Submit">
