--- a/forex/index.html
+++ b/forex/index.html
@@ -8,7 +8,13 @@
   <link rel="stylesheet" href="js/slick/slick.css"/>
   <link rel="stylesheet" href="js/slick/slick-theme.css"/>
   <link rel="stylesheet" href="css/style.min.css">
-  <link rel="icon" type="image/ico" href="img/favicon.ico">
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="76x76" href="img/fav/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
+  <link rel="manifest" href="img/fav/manifest.json">
+  <link rel="mask-icon" href="img/fav/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <header class="page-header">
@@ -54,7 +60,7 @@
         <div class="container">
           <p>TRADE THE WORLD WITH</p>
           <img src="img/slider-logo.svg" alt="">
-          <p>CFDs on FOREX, SHARES, INDICES,<br>SPOT METALS, FUTURES, BONDS, OPTIONS<br>AND ETFs</p>
+          <p>CFDs on Forex, Stocks, Commodities,<br>Indices and Cryptocurrencies</p>
           <a href="#">START TRADING NOW</a>
         </div>
       </div>
@@ -62,7 +68,7 @@
         <div class="container">
           <p>TRADE THE WORLD WITH</p>
           <img src="img/slider-logo.svg" alt="">
-          <p>CFDs on FOREX, SHARES, INDICES,<br>SPOT METALS, FUTURES, BONDS, OPTIONS<br>AND ETFs</p>
+          <p>CFDs on Forex, Stocks, Commodities,<br>Indices and Cryptocurrencies</p>
           <a href="#">START TRADING NOW</a>
         </div>
       </div>
