--- a/forex/about-us/security-of-funds.html
+++ b/forex/about-us/security-of-funds.html
@@ -6,6 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Security of Funds - Forex 24</title>
   <link rel="stylesheet" href="../css/style.min.css">
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="76x76" href="../img/fav/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/fav/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../img/fav/favicon-16x16.png">
+  <link rel="manifest" href="../img/fav/manifest.json">
+  <link rel="mask-icon" href="../img/fav/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <header class="page-header  page-header--temp">
