--- a/forex/about-us/security-of-funds.html
+++ b/forex/about-us/security-of-funds.html
@@ -49,7 +49,7 @@
           </a>
           <a href="licenses-and-regulations">LICENSES AND REGULATIONS</a>
           <a style="color: gray">SECURITY OF FUNDS</a>
-          <a href="#">STP Broker</a>
+          <a href="#">STP BROKER</a>
           <a href="legal-documents.html">LEGAL DOCUMENTS</a>
           <a href="kids.html">KIDs</a>
           <a href="careers.html">CAREERS</a>
