--- a/forex/index.html
+++ b/forex/index.html
@@ -44,7 +44,7 @@
         <div class="container">
           <p>TRADE THE WORLD WITH</p>
           <img src="img/slider-logo.svg" alt="">
-          <p>CFDs on FOREX, SHARES, INDICES,<br>SPOT METALS, FUTURES, BONDS, OPTIONS<br>AND ETFs</p>
+          <p>CFDs on Forex, Stocks, Indices,<br>Commodities and Cryptocurrencies</p>
           <a href="#">START TRADING NOW</a>
         </div>
       </div>
