--- a/forex/index.html
+++ b/forex/index.html
@@ -193,7 +193,7 @@
         <div class="scroll__flex">
           <div class="scroll__box">
             <b>intuitive INTERFACE</b>
-            <p>It`s, very intuitive and it informs you about all<br>the latest developments in the trading field.<br>Overall, the MT4 is the most popular and<br>widely used Forex trading platform</p>
+            <p>It`s very intuitive and it informs you about all<br>the latest developments in the trading field.<br>Overall, the MT4 is the most popular and<br>widely used Forex trading platform</p>
             <a href="#">Learn More</a>
           </div>
           <div class="scroll__box  scroll__box--mb">
