--- a/forex/trading/account-types.html
+++ b/forex/trading/account-types.html
@@ -68,7 +68,7 @@
   </section>
   <section class="account">
     <div class="container">
-      <p>We present our customers with an account selection that can satisfy each trader’s needs and preferences.<br>Our team has thought about even the smallest of details and produced different account types so you can select the one that best suits your needs.<br>There are different accounts to choose from and each one has its benefits</p>
+      <p>We present our customers with an account selection that can satisfy each trader’s needs and preferences.<br>Our team has thought about even the smallest of details and produced different account types,<br>so you can select the one that best suits your needs.<br>There are different accounts to choose from and each one has its benefits</p>
     </div>
       <div class="account__types">
         <div class="account__box  account__box--bronze">
