--- a/forex/index.html
+++ b/forex/index.html
@@ -46,6 +46,7 @@
           <img src="img/slider-logo.svg" alt="">
           <p>CFDs on Forex, Stocks, Indices,<br>Commodities and Cryptocurrencies</p>
           <a href="#">START TRADING NOW</a>
+          <small>Trading involves risk of loss</small>
         </div>
       </div>
       <div class="slider__slide  slider__slide--two">
@@ -54,6 +55,7 @@
           <img src="img/slider-logo.svg" alt="">
           <p>CFDs on Forex, Stocks, Indices,<br>Commodities and Cryptocurrencies</p>
           <a href="#">START TRADING NOW</a>
+          <small>Trading involves risk of loss</small>
         </div>
       </div>
       <div class="slider__slide  slider__slide--three">
@@ -62,6 +64,7 @@
           <img src="img/slider-logo.svg" alt="">
           <p>CFDs on Forex, Stocks, Indices,<br>Commodities and Cryptocurrencies</p>
           <a href="#">START TRADING NOW</a>
+          <small>Trading involves risk of loss</small>
         </div>
       </div>
       <div class="slider__slide  slider__slide--four">
@@ -70,6 +73,7 @@
           <img src="img/slider-logo.svg" alt="">
           <p>CFDs on Forex, Stocks, Indices,<br>Commodities and Cryptocurrencies</p>
           <a href="#">START TRADING NOW</a>
+          <small>Trading involves risk of loss</small>
         </div>
       </div>
     </div>
@@ -139,6 +143,7 @@
           <li>Touch-Friendly Technical indicators</li>
         </ul>
         <a href="#">START TRADING NOW</a>
+        <small>Trading involves risk of loss</small>
       </div>
     </div>
   </section>
@@ -216,6 +221,7 @@
             <li>Real time insights</li>
           </ul>
           <a href="#">START TRADING NOW</a>
+          <small>Trading involves risk of loss</small>
         </div>
       </div>
     </div>
