--- a/forex/index.html
+++ b/forex/index.html
@@ -114,7 +114,7 @@
           </div>
         </div>
         <div class="slider__slide  online__slide--two">
-          <div class="online__box  online__box--zulu">
+          <div class="online__box  online__box--tradency">
             <b>Fintech since 2005</b>
             <p>Pioneering financial technology provider,<br>focusing on B2B product development</p>
             <a href="#">Read More</a>
