--- a/forex-lp/index.html
+++ b/forex-lp/index.html
@@ -22,7 +22,7 @@
               <input type="email" tabindex="2" placeholder="Email">
               <input type="tel" tabindex="3" placeholder="Phone number">
             </div>
-            <button class="form__btn">Get free trading account</button>
+            <button class="form__btn">Get free demo account</button>
           </div>
           <input id="checkbox" type="checkbox" tabindex="4">
           <label for="checkbox">I am over 18 years and I accept these Terms & Conditions</label>
