--- a/crypto-b/index.html
+++ b/crypto-b/index.html
@@ -148,15 +148,15 @@
     <div class="container">
       <div class="news__flex">
         <div class="news__left-column">
-          <b>WHY TO CHOOSE +500crypto</b>
+          <b>Why to choose +500crypto</b>
           <p>+500crypto offers traders a wide range of possibilities. We offer a better way to move money, as people all over the world now, make use of digital currencies to send money across the world irrespective of your geographical location. This way is faster, easier and cheaper to use than paper money. Investing in digital currencies also ensures financial freedom, as no single entity or government policy controls it. </p>
         </div>
         <div class="news__middle-column">
-          <b>A NEW TYPE OF INVESTMENT</b>
+          <b>A new type of investment</b>
           <p>The emergence of cryptocurrencies into the market is something every trader is excited about. This is because of the ease and transparency involved in the use of digital currencies. When you think of trading cryptocurrencies you should think of +500crypto. +500crypto web socket feeds allows you to easily gain access to real-time market data and our trading API helps you develop safe programmatic trading bots.</p>
         </div>
         <div class="news__right-column">
-          <b>FRIENDLY INTERFACE</b>
+          <b>Friendly interface</b>
           <p>+500crypto offers a very friendly and unique interface to trade on. Our amazing platform simplifies trading and makes the experience a great one for every trader. You can easily customize your interface. Arrange and organize your workspace as it suits you from theme selection, compose layouts, notifications set up and lots more. With +500crypto trading is on a whole new level entirely. Sign up today.</p>
         </div>
       </div>
@@ -166,7 +166,7 @@
     <div class="container container--crypto">
       <div class="crypto__flex">
         <h1>A cryptobank for everyone</h1>
-        <p>In 8 years’ time, the crypto-economy will exceed 1 trillion dollars. Cryptobanks will become a cornerstone in the relations between decentralized economy and future daily</p>
+        <p>In 8 years’ time, the crypto-economy will exceed 1 trillion dollars.<br>Cryptobanks will become a cornerstone in the relations<br>between decentralized economy and future daily</p>
         <a href="https://client.+500crypto.com/en/members/register/real/">Create Account</a>
       </div>
     </div>
@@ -175,7 +175,7 @@
     <div class="container container--trading">
       <div class="trading__flex">
         <h2>NO EXPERIENCE?</h2>
-        <p>You have no worries. Are you thinking of venturing into the world of cryptocurrency trading? +500crypto has you covered; So sign up today and get a demo account. A demo account will prepare and teach you what to expect in the real market. We also have already prepared educational tool from top professionals to enhance your knowledge about trading.</p>
+        <p>You have no worries. Are you thinking of venturing into the world of cryptocurrency trading? +500crypto has you covered. So sign up today and get a demo account. A demo account will prepare and teach you what to expect in the real market. We also have already prepared educational tool from top professionals to enhance your knowledge about trading.</p>
       </div>
     </div>
     <div class="trading__coin">
