--- a/forex/index.html
+++ b/forex/index.html
@@ -152,7 +152,7 @@
       <h2 class="trading__title">YOUR PERSONAL MULTYPLATFORM TRADING VEHICLE</h2>
       <div class="trading__flex">
         <div class="trading__img"></div>
-        <p>MT4 is a world-wide renowned application which enables you to trade Forex, Commodities and Futures. It is suitable for beginner investors, but also for more experienced ones, because it is so thorough and easy to use. It`s, very intuitive and it informs you about all the latest developments in the trading field. Overall, the MT4 is the most popular and widely used Forex trading platform.</p>
+        <p>MT4 is a world-wide renowned application which enables you to trade Forex, Commodities and Futures. It is suitable for beginner investors, but also for more experienced ones, because it is so thorough and easy to use.<br><br>It`s, very intuitive and it informs you about all the latest developments in the trading field. Overall, the MT4 is the most popular and widely used Forex trading platform.</p>
       </div>
     </div>
   </section>
