--- a/crypto-b/index.html
+++ b/crypto-b/index.html
@@ -156,7 +156,7 @@
           <p>The emergence of cryptocurrencies into the market is something every trader is excited about. This is because of the ease and transparency involved in the use of digital currencies. When you think of trading cryptocurrencies you should think of +500crypto. +500crypto web socket feeds allows you to easily gain access to real-time market data and our trading API helps you develop safe programmatic trading bots.</p>
         </div>
         <div class="news__right-column">
-          <b>Friendly interface</b>
+          <b>User friendly interface</b>
           <p>+500crypto offers a very friendly and unique interface to trade on. Our amazing platform simplifies trading and makes the experience a great one for every trader. You can easily customize your interface. Arrange and organize your workspace as it suits you from theme selection, compose layouts, notifications set up and lots more. With +500crypto trading is on a whole new level entirely. Sign up today.</p>
         </div>
       </div>
