--- a/forex-lp/index.html
+++ b/forex-lp/index.html
@@ -38,7 +38,9 @@
       <small>*Contact us. Leverage restrictions apply</small>
     </div>
   </header>
-  <div class="string"></div>
+  <div class="string">
+    <iframe src="https://d1ynx0m2vyh32o.cloudfront.net/prod/widgets/src/index.html?cat=currencies&theme=lp&quote_only=true" frameborder="0"></iframe>
+  </div>
   <div class="miss">
     <p class="miss__top">CFDs are leveraged products that involve substantial risk and may result in the loss of your entire balance.</p>
     <p class="miss__center">Don’t miss this free trial with <span>Forex24 Global</span></p>
