--- a/forex-lp/index-it.html
+++ b/forex-lp/index-it.html
@@ -122,9 +122,9 @@
   <footer class="footer">
     <div class="container">
       <h1 class="visually-hidden">Footer</h1>
-      <b>General Risk Warning</b>
-      <p>Trading in complex leveraged products such as CFDs carries a high level of risk and can result in the loss of all your investment. As such, CFDs may not be appropriate for all investors. You should not invest money that you cannot afford to lose. Before deciding to trade, you should become aware of all the risks associated with CFDs trading, and seek advice from an independent and suitably licensed financial advisor. Under no circumstances shall we have any liability to any person or entity for (a) any loss or damage in whole or part caused by, resulting from, or relating to any transactions related to CFDs or (b) any direct, indirect, special, consequential or incidental damages whatsoever. For more information about the risks associated with trading CFDs please read our "Full Risk Disclosure Statement".</p>
-      <p>Copyright © 2018. All Rights Reserved</p>
+      <b>Avvertenza generale sul rischio</b>
+      <p>La negoziazione di prodotti con leva finanziaria complessi come i CFD comporta un alto livello di rischio e può comportare la perdita di tutti gli investimenti. Pertanto, i CFD potrebbero non essere appropriati per tutti gli investitori. Non dovresti investire denaro che non puoi permetterti di perdere. Prima di decidere di fare trading, è necessario prendere coscienza di tutti i rischi associati al trading di CFD e chiedere consiglio ad un consulente finanziario indipendente e opportunamente autorizzato. In nessuna circostanza dovremo essere ritenuti responsabili verso qualsiasi persona o entità per (a) qualsiasi perdita o danno, in tutto o in parte, causato da, derivante da, o relativo a transazioni correlate a CFD o (b) qualsiasi diretto, indiretto, speciale, danno consequenziali o incidentale di sorta. Per ulteriori informazioni sui rischi associati al trading di CFD, leggi la nostra "Dichiarazione informativa completa sul rischio".</p>
+      <p>Copyright © 2018. Tutti i diritti riservati</p>
     </div>  
   </footer>
 </body>
