--- a/forex-lp/index-it.html
+++ b/forex-lp/index-it.html
@@ -19,7 +19,7 @@
     <div class="container  container--header">
       <h1 class="visually-hidden">Forex24 Global</h1>
       <img src="img/logo.svg" alt="Forex24Global">
-      <b class="header__title">Ora puoi fare trading in CFD con spread competitivi e fino a 1: 400 di leva finanziaria*</b>
+      <b class="header__title">Ora puoi fare trading in CFD con spread competitivi e fino a 1:400 di leva finanziaria*</b>
       <div class="header__form">
         <b>Inizia a fare trading con un conto di prova gratuito</b>
         <form class="form" action="" method="post">
@@ -112,7 +112,7 @@
       <h1>Sei pronto per iniziare a fare trading?<br>Ottieni subito il tuo conto demo gratuito!</h1>
       <a href="#">Voglio il mio conto demo gratuito</a>
       <div class="acc__shadow"></div>
-      <p>CFDs are leveraged products that involve substantial risk and may result in the loss of your entire balance.</p>
+      <p>I CFD sono prodotti con leva finanziaria e comprendono un rischio sostanziale che puo' portare alla perdita del vostro denaro.</p>
     </div>
   </section>
   <section class="pay">
