--- a/forex-lp/index-it.html
+++ b/forex-lp/index-it.html
@@ -21,7 +21,7 @@
       <img src="img/logo.svg" alt="Forex24Global">
       <b class="header__title">Ora puoi fare trading in CFD con spread competitivi e fino a 1:400 di leva finanziaria*</b>
       <div class="header__form">
-        <b>Inizia a fare trading con un conto di prova gratuito</b>
+        <b>Fai trading con un conto di prova gratuito</b>
         <form class="form" action="" method="post">
           <div class="form__flex">
             <div class="form__input">
