--- a/forex/index.html
+++ b/forex/index.html
@@ -226,8 +226,20 @@
       </div>
     </div>
   </section>
-  <section class="payment">
+  <!-- <section class="payment">
     <div class="payment__box"></div>
+  </section> -->
+  <section class="payment">
+    <!-- <div class="container"> -->
+      <div class="payment__flex">
+        <div class="payment__box  payment__box--methods">Payment<br>Methods</div>
+        <div class="payment__box  payment__box--visa"></div>
+        <div class="payment__box  payment__box--master"></div>
+        <div class="payment__box  payment__box--bank"></div>
+        <div class="payment__box  payment__box--net"></div>
+        <div class="payment__box  payment__box--skrill"></div>
+      </div>
+    <!-- </div> -->
   </section>
   <footer class="page-footer">
     <div class="container">
