add payment on all pages

--- a/forex/register/registration.html
+++ b/forex/register/registration.html
@@ -112,14 +112,18 @@
         <button type="submit" name="submit">Register</button>
       </form>
       <hr>
-      <div class="container">
-        
-      </div>
       <p class="registration__title  registration__title--pb">Risk Warning: Our products are traded on margin and carry a high level of risk and it is possible to lose all your capital. These products may not be suitable for everyone and you should ensure that you understand the risks involved.</p>
     </div>
   </section>
   <section class="payment  payment--temp">
-    <div class="payment__box"></div>
+    <div class="payment__flex">
+      <div class="payment__box  payment__box--methods">Payment<br>Methods</div>
+      <div class="payment__box  payment__box--visa"></div>
+      <div class="payment__box  payment__box--master"></div>
+      <div class="payment__box  payment__box--bank"></div>
+      <div class="payment__box  payment__box--net"></div>
+      <div class="payment__box  payment__box--skrill"></div>
+    </div>
   </section>
   <footer class="page-footer">
     <div class="container">
