--- a/forex/trading/trading-specification.html
+++ b/forex/trading/trading-specification.html
@@ -289,7 +289,14 @@
     </div>
   </section>
   <section class="payment  payment--temp">
-    <div class="payment__box"></div>
+    <div class="payment__flex">
+      <div class="payment__box  payment__box--methods">Payment<br>Methods</div>
+      <div class="payment__box  payment__box--visa"></div>
+      <div class="payment__box  payment__box--master"></div>
+      <div class="payment__box  payment__box--bank"></div>
+      <div class="payment__box  payment__box--net"></div>
+      <div class="payment__box  payment__box--skrill"></div>
+    </div>
   </section>
   <footer class="page-footer">
     <div class="container">
