--- a/forex/trading/account-types.html
+++ b/forex/trading/account-types.html
@@ -203,7 +203,14 @@
       <p>Trading involves risk of loss</p>
     </div>
     <section class="payment  payment--temp">
-      <div class="payment__box"></div>
+      <div class="payment__flex">
+        <div class="payment__box  payment__box--methods">Payment<br>Methods</div>
+        <div class="payment__box  payment__box--visa"></div>
+        <div class="payment__box  payment__box--master"></div>
+        <div class="payment__box  payment__box--bank"></div>
+        <div class="payment__box  payment__box--net"></div>
+        <div class="payment__box  payment__box--skrill"></div>
+      </div>
     </section>
   </section>
   <footer class="page-footer">
