add pay on italian page

--- a/forex-lp/index-it.html
+++ b/forex-lp/index-it.html
@@ -115,9 +115,16 @@
       <p>I CFD sono prodotti con leva finanziaria e comprendono un rischio sostanziale che puo' portare alla perdita del vostro denaro.</p>
     </div>
   </section>
-  <section class="pay">
+  <section class="payment">
     <h1 class="visually-hidden">Payment Methods</h1>
-    <div class="pay__methods"></div>
+    <div class="payment__flex">
+      <div class="payment__box  payment__box--methods">Payment<br>Methods</div>
+      <div class="payment__box  payment__box--visa"></div>
+      <div class="payment__box  payment__box--master"></div>
+      <div class="payment__box  payment__box--bank"></div>
+      <div class="payment__box  payment__box--net"></div>
+      <div class="payment__box  payment__box--skrill"></div>
+    </div>
   </section>
   <footer class="footer">
     <div class="container">
