--- a/forex-lp/index.html
+++ b/forex-lp/index.html
@@ -116,9 +116,16 @@
       <p>CFDs are leveraged products that involve substantial risk and may result in the loss of your entire balance.</p>
     </div>
   </section>
-  <section class="pay">
+  <section class="payment">
     <h1 class="visually-hidden">Payment Methods</h1>
-    <div class="pay__methods"></div>
+    <div class="payment__flex">
+      <div class="payment__box  payment__box--methods">Payment<br>Methods</div>
+      <div class="payment__box  payment__box--visa"></div>
+      <div class="payment__box  payment__box--master"></div>
+      <div class="payment__box  payment__box--bank"></div>
+      <div class="payment__box  payment__box--net"></div>
+      <div class="payment__box  payment__box--skrill"></div>
+    </div>
   </section>
   <footer class="footer">
     <div class="container">
