translate in italian

--- a/forex-lp/index-it.html
+++ b/forex-lp/index-it.html
@@ -118,7 +118,7 @@
   <section class="payment">
     <h1 class="visually-hidden">Payment Methods</h1>
     <div class="payment__flex">
-      <div class="payment__box  payment__box--methods">Payment<br>Methods</div>
+      <div class="payment__box  payment__box--methods">Modalita di<br>pagamento</div>
       <div class="payment__box  payment__box--visa"></div>
       <div class="payment__box  payment__box--master"></div>
       <div class="payment__box  payment__box--bank"></div>
