--- a/forex-lp/index.html
+++ b/forex-lp/index.html
@@ -130,8 +130,10 @@
   <footer class="footer">
     <div class="container">
       <h1 class="visually-hidden">Footer</h1>
+      <b>Company Information</b>
+      <p>The domain www.forex24.com is operated by Lydya Financial Ltd, a Cyprus Investment Firm, authorized and regulated by the Cyprus Securities and Exchange Commission with CIF license number 300/16. Lydya Financial Ltd is located at 4 Modestou Panteli, Mesa Geitonia, CY-4003, Limassol, Cyprus.</p>
       <b>General Risk Warning</b>
-      <p>Trading in complex leveraged products such as CFDs carries a high level of risk and can result in the loss of all your investment. As such, CFDs may not be appropriate for all investors. You should not invest money that you cannot afford to lose. Before deciding to trade, you should become aware of all the risks associated with CFDs trading, and seek advice from an independent and suitably licensed financial advisor. Under no circumstances shall we have any liability to any person or entity for (a) any loss or damage in whole or part caused by, resulting from, or relating to any transactions related to CFDs or (b) any direct, indirect, special, consequential or incidental damages whatsoever. For more information about the risks associated with trading CFDs please read our "Full Risk Disclosure Statement".</p>
+      <p>CFDs are leveraged products. Trading in CFDs related to foreign exchange, commodities, equities, financial indices and other underlying variables*, carry a high level of risk and can result in the loss of all of your investment. As such, CFDs may not be suitable for all investors. You should not invest money that you cannot afford to lose. Before deciding to trade, you should become aware of all the risks associated with CFD trading, and seek advice from an independent and suitably licensed financial advisor. Under no circumstances shall we have any liability to any person or entity for (a) any loss or damage in whole or part caused by, resulting from, or relating to any transactions related to CFDs or (b) any direct, indirect, special, consequential or incidental damages whatsoever. For more information about the risks associated with trading CFDs please read our ‘Full Risk Disclosure Statement’.</p>
       <p>Copyright © 2018. All Rights Reserved</p>
     </div>  
   </footer>
