--- a/forex-lp/index.html
+++ b/forex-lp/index.html
@@ -280,7 +280,7 @@
             <button class="form__btn">Get free demo account</button>
           </div>
           <input id="checkbox" type="checkbox" tabindex="6" required>
-          <label for="checkbox">I am over 18 years and I accept these Terms & Conditions</label>
+          <label for="checkbox">I confirm I am over 18 years old and that I have read, understood<br>and accept the General Risk Disclosure</label>
         </form>
       </div>
       <small>*Contact us. Leverage restrictions apply</small>
