--- a/forex-lp/index-it.html
+++ b/forex-lp/index-it.html
@@ -277,7 +277,7 @@
                 </optgroup>
               </select>
             </div>
-            <button class="form__btn">Ottieni un conto gratuito di trading</button>
+            <button class="form__btn">Apri un conto demo gratuito</button>
           </div>
           <input id="checkbox" type="checkbox" tabindex="6" required>
           <label for="checkbox">Io confermo che ho piu' di 18 anni e ho letto, compreso e accetto</label>
