--- a/forex-lp/index-it.html
+++ b/forex-lp/index-it.html
@@ -280,7 +280,7 @@
             <button class="form__btn">Apri un conto demo gratuito</button>
           </div>
           <input id="checkbox" type="checkbox" tabindex="6" required>
-          <label for="checkbox">Io confermo che ho piu' di 18 anni e ho letto, compreso e accetto</label>
+          <label for="checkbox">Io confermo che ho piu' di 18 anni e ho letto, compreso<br>e accetto l'Informativa Generale sul Rischio</label>
         </form>
       </div>
       <small>*Contattaci. Si applicano restrizioni sulla leva finanziaria</small>
