--- a/trade-lp/index.html
+++ b/trade-lp/index.html
@@ -301,11 +301,11 @@
         </div>
         <div class="edge__box  edge__box--free">
           <b>Extremely Low Spreads</b>
-          <p>You can trade with fixed and variable spreads, which are among the lowest in the industry, starting from just 0.1 on ECN accounts and 0.5 on Standard accounts.</p>
+          <p>Trading with fixed and variable spreads is made easy, these which are the least in the least in the industry. Reading from 0.1 on ECN accounts and 0.5 on Standard accounts.</p>
         </div>
         <div class="edge__box  edge__box--award">
           <b>Free Education</b>
-          <p>Not an expert? No problem. We'll provide you with a wide range of articles, webinars and seminars that'll teach you how to use the most effective trading strategies.</p>
+          <p>New to trading? We got you covered, we’ll provide comprehensive articles, webinars, and blogs that are highly educational. These tools will teach and equip you with the right trading strategies.</p>
         </div>
       </div>
       <div class="edge__flex  edge__flex--second">
